fixed issue of images not showing on home, product and product list pages

--- a/css/single-product-page.css
+++ b/css/single-product-page.css
@@ -19,7 +19,7 @@ body{
 }
 
 .product-small-image{
-    /* width: 100%; */
+    width: 100%;
     height: 82px;
     background-image: url("/img/cam.jpg");
     background-size: cover;
@@ -31,10 +31,11 @@ body{
 .product-big-image{
     margin-top: 15px;
     height: 620px;
-    background-image: url("/img/cam.jpg");
+    /* background-image: url("/img/cam.jpg");
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
+    object-fit: cover;
 }
 
 .product-full-details{
@@ -116,12 +117,14 @@ body{
     width: 50%;
     color: white;
     text-align: center;
-    padding-top: 7px;
+    padding-top: 2px;
     margin-top: 30px;
     cursor: pointer;
 }
 
 .btn-save-for-later{
+    background: transparent;
+    border: none;
     text-transform: uppercase;
     font-size: 14px;
     font-weight: bold;
